# JobifyAS

./: .travis.yml  Dockerfile  README.md  travis.yml
AppServer/: .gitignore  CMakeLists.txt  CMakeLists.txt~  cookies.txt  editProfile.sh  filterSkillsByCategory.sh  finalCMakeLists.txt  getSkills.sh  install.sh  job_positions.sh  login.sh  newJobPosition.sh  prueba.sh  prueba.sh~  registerUser.sh  registerUser.sh~  setLocation.sh
AppServer/scripts/: 1registerUser.sh  2editProfile.sh  3getProfile.sh  4registerUser.sh  5addContact.sh  acceptInvitation.sh  addContact.sh  addSkill.sh  categories.sh  deleteCategory.sh  deleteDBs.sh  deleteJobPosition.sh  deleteSkill.sh  fbfail.sh  fblogin.sh  filterByCategory.sh  filterSkillsByCategory.sh  getCategories.sh  getContacts.sh  getEducationCategory.sh  getProfile.sh  getSkills.sh  getSoftwareCategory.sh  install.sh  job_positions.sh  login.sh  modifyCategory.sh  modifyJobPosition.sh  modifySkill.sh  multiThread.sh  newCategory.sh  newJobPosition.sh  printAccountsDB.sh  printProfilesDB.sh  registerMultipleUsers.sh  registerUser.sh  run.sh  setLocation.sh
AppServer/src/: Encrypt.cpp  JobifyController.cpp  JobifyController.cpp~  JobifyController.h  JobifyController.h~  MyController.cpp  MyController.cpp~  MyController.h  MyController.h~  Profile.cpp  Profile.h  SSHandler.h  dbController.cpp  dbController.h  main.cpp  main.cpp~  users.json  users.json~
AppServer/src/Handlers/: AccountController.cpp  AccountController.h  CMakeLists.txt  CurlWrapper.cpp  CurlWrapper.h  FBHandler.cpp  FBHandler.h  JobifyController.cpp  JobifyController.h  ProfileController.cpp  ProfileController.h  SSController.cpp  SSController.h  SSHandler.cpp  SSHandler.h
AppServer/src/Model/: CMakeLists.txt  Category.cpp  Category.h  Credentials.cpp  Credentials.h  Entity.cpp  Entity.h  ExpMin.cpp  ExpMin.h  Experience.cpp  Experience.h  Location.cpp  Location.h  Profile.cpp  Profile.h  fbCredentials.cpp  fbCredentials.h  jobifyCredentials.cpp  jobifyCredentials.h
AppServer/src/db/: CMakeLists.txt  dbController.cpp  dbController.h  dbCredentials.cpp  dbCredentials.h  dbToken.cpp  dbToken.h  dbUsers.cpp  dbUsers.h
AppServer/src/mongoose/: Controller.cpp  Controller.h  JsonController.cpp  JsonController.h  JsonResponse.cpp  JsonResponse.h  Mutex.cpp  Mutex.h  Request.cpp  Request.h  RequestHandler.h  Response.cpp  Response.h  Server.cpp  Server.h  Session.cpp  Session.h  Sessions.cpp  Sessions.h  StreamResponse.cpp  StreamResponse.h  UploadFile.cpp  UploadFile.h  Utils.cpp  Utils.h  WebController.cpp  WebController.h  WebSocket.cpp  WebSocket.h  WebSockets.cpp  WebSockets.h  jsoncpp.cpp  mongoose.c  mongoose.h
AppServer/src/tests/: PostTestCases.py  restTester.py
AppServer/src/utils/: CMakeLists.txt  Encrypt.cpp  Encrypt.h  utils.cpp  utils.h
AppServer/tests/: AccountControllerTest.cpp  AccountControllerTest.h  CMakeLists.txt  CredentialsTest.cpp  CredentialsTest.h  JobifyControllerTest.cpp  JobifyControllerTest.h  LocationTest.cpp  LocationTest.h  ProfileTest.cpp  ProfileTest.h  main.cpp
Manuales/: .gitignore
Manuales/Admin/source/: conf.py  index.rst  jobify.rst
Manuales/Programador/source/: index.rst  jobify.rst
Manuales/Proyecto/source/: index.rst  jobify.rst
